fix: overflow

--- a/src/components/HeroBullets/HeroBullets.module.css
+++ b/src/components/HeroBullets/HeroBullets.module.css
@@ -52,12 +52,12 @@
 
 .container {
   padding-top: 4rem;
-  width: 100vw;
+  width: 100%;
 }
 
 .outterContainer {
-  width: 100vw;
-  max-width: 100vw;
+  width: 100%;
+  max-width: 100%;
   position: relative;
 }
 
